# klub_100kilo

./: .env  Dockerfile  README.md  docker-compose.yml  manage.py  nictakiego.txt  package-lock.json  package.json  pyproject.toml
.github/workflows/: docker-image.yml
chat/: consumers.py  urls.py
klub_100kilo/: admin.py  apps.py  forms.py  models.py  serializers.py  tests.py  views.py
klub_100kilo/migrations/: 0001_initial.py  0002_alter_diet_table_alter_measurements_table_and_more.py  0002_remove_reservations_date_reservations_end_and_more.py  0003_alter_reservations_gym_alter_reservations_user.py  0003_remove_trainings_trainer_id_and_more.py  0004_measurementsgoals_name.py  0005_reservations_training_id.py
lab_projekcik/: asgi.py  settings.py  urls.py  wsgi.py
lab_projekt/: asgi.py  settings.py  urls.py  wsgi.py
static/scripts/: book_training.js  diet.js  measurements.js
static/styles/: base.css  book_training.css  chat.css  diet.css  goals.css  main.css  reservation_main_page.css  workouts.css
templates/: account.html  base.html  book_trainer.html  book_training.html  change_password.html  diet.html  edit_profile.html  goals.html  hero.html  login.html  main.html  measurements.html  register.html  reservation_main_page.html  workouts.html
templates/chat/: chatPage.html
