[tool.poetry]
name = "lab-projekt"
version = "0.1.0"
description = ""
authors = ["Dawid Mularczyk <muldaw@student.agh.edu.pl>, Maciej Wilewski <mwilewski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.1"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
