[tool.poetry]
name = "lab-projekcik"
version = "0.1.0"
description = ""
authors = ["Dawid Mularczyk <muldaw@student.agh.edu.pl>, Maciej Wilewski <mwilewski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
psycopg2 = "^2.9.1"
mysqlclient = "^2.2.4"
bulma = "^1.0.1"
black = "^24.4.0"
drf-yasg = "^1.21.7"
django-webpack-loader = "^3.1.0"
npm = "^0.1.1"
daphne = "^4.1.2"
channels = "^4.1.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
